<resources>
    <string name="app_name">ConstraintLayout Sample </string>
    <string name="dhaka_description">Tourist Attractions of Dhaka City, a Historical and Capital City of Bangladesh
Dhaka (Bangla: ঢাকা, pronounced: English formerly capital of Bangladesh) is the capital of Bangladesh. The main town of the territory of Dhaka Division Dhaka. Is an area of Dhaka "11 about of City of London proper in the world with a universe of 12 million. It addresses an area of capital of Bangladesh "a population of 17 million. The historic district of Dhaka stands on duty the shore eastern United States of the river buriganga. It is located in the central part of the Delta of Bengal. Bengali Muslims represent the absolute majority of the population, accompanied by Bengali Hindus and Buddhists, Christian religion, Bahai Bengali communities.
During the Mongol conglomerate in the 17th century, the township "Jahangir Nagar". </string>
    <string name="dummy">dummy</string>
    <string name="discard">Discard</string>
    <string name="upload">Upload</string>
    <string name="camera_settings">ƒ/4 16s ISO 200</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="camera_value">Leica M Typ 240</string>
    <string name="dhaka">Dhaka</string>
</resources>
