<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_done"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="0dp"
    app:layout_editor_absoluteY="80dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/header"
        android:src="@drawable/dhaka"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_editor_absoluteX="0dp"
        app:layout_editor_absoluteY="0dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/dummy"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/favorite"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/favorite"
        android:src="@drawable/ic_star"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_editor_absoluteX="359dp"
        app:layout_editor_absoluteY="104dp"
        android:background="@drawable/bg_fab"
        android:padding="5dp"
        android:contentDescription="@string/dummy"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="0"
        tools:layout_editor_absoluteX="332dp"
        tools:layout_editor_absoluteY="87dp"
        app:layout_constraintTop_toTopOf="@+id/activity_main_done"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/title"
        android:text="@string/dhaka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="140dp"
        android:textSize="24sp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="123dp" />

    <EditText
        android:id="@+id/cameraType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/camera_value"
        android:ems="10"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="176dp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="159dp"
        app:layout_constraintLeft_toLeftOf="@+id/settings"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="8dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/settings"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/cameraLabel"
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="189dp"
        android:labelFor="@+id/cameraType"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintBaseline_creator="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="173dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/cameraType"
        tools:layout_constraintBaseline_creator="0" />

    <TextView
        android:id="@+id/settingsLabel"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="238dp"
        android:labelFor="@+id/settings"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintBaseline_creator="1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="223dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/settings"
        tools:layout_constraintBaseline_creator="0" />

    <EditText
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/camera_settings"
        android:ems="10"
        app:layout_editor_absoluteX="73dp"
        app:layout_editor_absoluteY="225dp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="1"
        app:layout_constraintRight_creator="1"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="209dp"
        app:layout_constraintLeft_toRightOf="@+id/settingsLabel"
        android:layout_marginStart="6dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/cameraType"
        android:layout_marginTop="8dp"
        tools:layout_constraintTop_creator="0"
        app:layout_constraintRight_toRightOf="@+id/description"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/upload"
        android:text="@string/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="307dp"
        app:layout_editor_absoluteY="538dp"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="1"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="447dp"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBottom_toBottomOf="@+id/activity_main_done"
        android:layout_marginBottom="16dp"
        tools:layout_constraintBottom_creator="0" />

    <Button
        android:id="@+id/discard"
        android:text="@string/discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_editor_absoluteX="211dp"
        app:layout_editor_absoluteY="538dp"
        android:elevation="0dp"
        app:layout_constraintRight_creator="0"
        app:layout_constraintBaseline_creator="1"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="447dp"
        app:layout_constraintRight_toLeftOf="@+id/upload"
        android:layout_marginEnd="8dp"
        tools:layout_constraintRight_creator="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/upload"
        tools:layout_constraintBaseline_creator="0" />

    <TextView
        android:id="@+id/description"
        android:text="@string/dhaka_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="274dp"
        android:fadingEdge="vertical"
        android:ellipsize="end"
        android:textSize="15sp"
        app:layout_constraintLeft_creator="1"
        app:layout_constraintTop_creator="0"
        app:layout_constraintRight_creator="1"
        app:layout_constraintBottom_creator="0"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="259dp"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main_done"
        android:layout_marginStart="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/settings"
        android:layout_marginTop="8dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="@+id/activity_main_done"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/discard"
        android:layout_marginBottom="8dp"
        tools:layout_constraintBottom_creator="1" />
</android.support.constraint.ConstraintLayout>
